; ModuleID = '/home/carl/AnghaBench/netdata/collectors/freebsd.plugin/extr_freebsd_sysctl.c_freebsd_plugin_init.c'
source_filename = "/home/carl/AnghaBench/netdata/collectors/freebsd.plugin/extr_freebsd_sysctl.c_freebsd_plugin_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@system_pagesize = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [36 x i8] c"FREEBSD: can't get system page size\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"kern.smp.cpus\00", align 1
@number_of_cpus = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [34 x i8] c"FREEBSD: can't get number of cpus\00", align 1
@.str.3 = private unnamed_addr constant [30 x i8] c"FREEBSD: wrong number of cpus\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @freebsd_plugin_init() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 (...) @getpagesize()
  store i64 %2, i64* @system_pagesize, align 8
  %3 = load i64, i64* @system_pagesize, align 8
  %4 = icmp sle i64 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i32 @error(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* %1, align 4
  br label %24

7:                                                ; preds = %0
  %8 = load i32, i32* @number_of_cpus, align 4
  %9 = call i32 @GETSYSCTL_BY_NAME(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i32 %8)
  %10 = call i64 @unlikely(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %7
  %13 = call i32 @error(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.2, i64 0, i64 0))
  store i32 1, i32* %1, align 4
  br label %24

14:                                               ; preds = %7
  %15 = load i32, i32* @number_of_cpus, align 4
  %16 = icmp ne i32 %15, 0
  %17 = xor i1 %16, true
  %18 = zext i1 %17 to i32
  %19 = call i64 @unlikely(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %14
  %22 = call i32 @error(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.3, i64 0, i64 0))
  store i32 1, i32* %1, align 4
  br label %24

23:                                               ; preds = %14
  store i32 0, i32* %1, align 4
  br label %24

24:                                               ; preds = %23, %21, %12, %5
  %25 = load i32, i32* %1, align 4
  ret i32 %25
}

declare dso_local i64 @getpagesize(...) #1

declare dso_local i32 @error(i8*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @GETSYSCTL_BY_NAME(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
